Final Edits - Navigation, checking errors
- Went through the navigation and changed to a border to make more accessible.
- Checked for errors in CSS and HMTL and added title within head
- Added paragraph bio to Behind the Lens
- Added class to paragraph on behind the lens to get content to justify

--- a/Index.html
+++ b/Index.html
@@ -7,13 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link
-  charset="utf-8"
   href="css/normalize.css"
   media="screen"
   rel="stylesheet"
 />
 <link
-charset="utf-8"
 href="css/main.css"
 media="screen"
 rel="stylesheet"
@@ -56,15 +54,14 @@ src="images/headshotofvivian.png"
 </div>
 
 <div class="title"> 
-<h3> About Me </h3>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fermentum, condimentum proin sit ac nulla urna. Ut tincidunt sit tortor fermentum. Nibh at faucibus pretium duis lectus. Sed netus viverra amet varius. Convallis vulputate tortor, nulla augue purus nisi, proin vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada.
-    vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada </p>
+<h3 class="about"> About Me </h3>
+  <p class="bio"> Hi! I am a photographer with a passion for creating photography pieces that speak to an abstract sense. I love being able to take something natural and make it into a statement piece. In my free time outside of photography I love to hike and go on outdoor adventures. I also love dogs, especially corgis! </p>
   </div>
 
   <div class="contact">
     <h4> Contact Information </h4>
-  <p>Contact Me at: vivperfetti@gmail.com
-    Follow Me on: LinkedIn @Vivian Perfetti </p>
+  <p>Contact me at: vivperfetti@gmail.com
+    Follow me on: LinkedIn @Vivian Perfetti </p>
   </div>
 
 </div>
