--- a/index2.html
+++ b/index2.html
@@ -7,17 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link
-  charset="utf-8"
   href="css/normalize.css"
   media="screen"
   rel="stylesheet"
 />
 <link
-charset="utf-8"
 href="css/main.css"
 media="screen"
 rel="stylesheet"
 />
+<title>Photography Portfolio - Vivian's Photos</title> 
 </head>
 
 <body> 
@@ -32,72 +31,71 @@ rel="stylesheet"
 
 <!-- Photography -->
 <div class="container">
-    <h1 class="/photography" >Photography</h1>
-<img class="logo"
-  alt="website logo"
-  height="100"
-  loading="lazy"    
-  src="graphics/logonew.svg"
-  width="100"
-/>
-    <h2 class="wrapper">Abstract Journey</h2>
-      <img src="images/perfetti.FF03.png" alt="abstract leaves" height="200"
+
+  <h1 class="/photography" >Photography</h1>
+    <img class="logo"
+    alt="website logo"
+    height="100"
+    loading="lazy"    
+    src="graphics/logonew.svg"
+    width="100"
+    />
+
+<h2 class="wrapper">Abstract Journey</h2>
+    <img src="images/perfetti.FF03.png" alt="abstract leaves" height="200"
       loading="lazy" width="300"/>
         <p> Abtract Leaves taken in spring of 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.LSF03.png" alt="abstract construction" height="200"
+    <img src="images/perfetti.LSF03.png" alt="abstract construction" height="200"
       loading="lazy" width="300"/>
         <p> Abstract Construction taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.FF01.png" alt="depth of leaf" height="200"
+    <img src="images/perfetti.FF01.png" alt="depth of leaf" height="200"
       loading="lazy" width="300"/>
         <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.FF02.png" alt="depth of leaf" height="200"
+    <img src="images/perfetti.FF02.png" alt="depth of leaf" height="200"
       loading="lazy" width="300"/>
-        <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.FF04.png" alt="depth of flower" height="200"
+        <p> Fabric Petals taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="images/perfetti.FF04.png" alt="depth of flower" height="200"
       loading="lazy" width="300"/>
         <p> Depth of Flower taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.FF05.png" alt="contrasting petals" height="200"
+    <img src="images/perfetti.FF05.png" alt="contrasting petals" height="200"
       loading="lazy" width="300"/>
-        <p> Contrasting Petals taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.FF06.png" alt="fly away fleaves" height="200"
+        <p> Contrasting Fibers taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="images/perfetti.FF06.png" alt="fly away fleaves" height="200"
       loading="lazy" width="300"/>
         <p> Fly Away Leaves taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.LSF01.png" alt="a hand in nature" height="200"
+    <img src="images/perfetti.LSF01.png" alt="a hand in nature" height="200"
       loading="lazy" width="300"/>
         <p> A Hand in Nature taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.LSF02.png" alt="timeline to plastic" height="200"
+    <img src="images/perfetti.LSF02.png" alt="timeline to plastic" height="200"
       loading="lazy" width="300"/>
         <p> Timeline to Plastic taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.LSF04.png" alt="A Nightmare Amoung" height="200"
-      loading="lazy" width="300"/>
-        <p> A Nightmare Amoung taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/Perfetti.LSF04.png" alt="Chess Game" height="200"
+    <img src="images/Perfetti.LSF04.png" alt="Chess Game" height="200"
       loading="lazy" width="300" />
         <p> Chess Game taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.LSF05.png" alt="Tunnel of Darkness" height="200"
+    <img src="images/perfetti.LSF05.png" alt="Tunnel of Darkness" height="200"
       loading="lazy" width="300"/>
         <p> Tunnel of Darkness taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.F101.png" alt="Spiked Ball" height="200"
+    <img src="images/perfetti.F101.png" alt="Spiked Ball" height="200"
         loading="lazy" width="300"/>
         <p> Spiked Ball taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.F103.png" alt="Time Turned Soft" height="200"
+    <img src="images/perfetti.F103.png" alt="Time Turned Soft" height="200"
           loading="lazy" width="300"/>
-        <p> Time Turned Soft" taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.F104.png" alt="A Rain Zone" height="200"
+        <p> Time Turned Soft taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="images/perfetti.F104.png" alt="A Rain Zone" height="200"
           loading="lazy" width="300" />
         <p> A Rain Zone taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.F105.png" alt="Watered Away" height="200"
+    <img src="images/perfetti.F105.png" alt="Watered Away" height="200"
           loading="lazy" width="300"/>
         <p> Watered Away taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="images/perfetti.F106.png" alt="Produce of Mother Nature" height="200"
+    <img src="images/perfetti.F106.png" alt="Produce of Mother Nature" height="200"
             loading="lazy" width="300"/>
         <p> Produce of Mother Nature taken in Spring 2021 on a Nikon 3500.</p> 
 
  <div class="contact">
           <h4> Contact Information </h4>
-        <p>Contact Me at: vivperfetti@gmail.com
-          Follow Me on: LinkedIn @Vivian Perfetti </p>
+        <p>Contact me at: vivperfetti@gmail.com
+          Follow me on: LinkedIn @Vivian Perfetti </p>
         </div>
-</div>
+   </div>
   </body>
-  </html>
+</html>
