--- a/index3.html
+++ b/index3.html
@@ -5,19 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link
-  charset="utf-8"
   href="css/normalize.css"
   media="screen"
   rel="stylesheet"
 />
 <link
-charset="utf-8"
 href="css/main.css"
 media="screen"
 rel="stylesheet"
-/>
+/>  
+<title>Photography Portfolio - Vivian's Resume</title> 
 </head>
 
 <body>
@@ -47,15 +46,15 @@ rel="stylesheet"
   alt="Resume"
   height="400"
   loading="lazy"    
-  src="graphics/vivian_perfetti_resume copy.jpg"
+  src="graphics/vivian_perfetti_resume_copy.jpg"
   width="350"
   />
 </div>
 
 <div class="contact">
   <h4> Contact Information </h4>
-<p>Contact Me at: vivperfetti@gmail.com
-  Follow Me on: LinkedIn @Vivian Perfetti </p>
+<p>Contact me at: vivperfetti@gmail.com
+  Follow me on: LinkedIn @Vivian Perfetti </p>
 </div>
 
 </div>
